--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,6 +1,6 @@
 .image {
    background-color: #490D40;
-   background: url('./assets/s3q44787.jpg') no-repeat center center;
+   background: url('../../assets/s3q44787.jpg') no-repeat center center;
    background-size: cover;
    height: 570px;
    margin-top: -20px;
