--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -1,25 +1,37 @@
-.custom-nav {
-  background-color: #FBFDFF !important;
+.navbar {
+  background-color: black !important;
 }
 
-.custom-nav a {
-  color: #767676;
+.give-button {
+  margin-top: 2px;
+  margin-bottom: 3px;
+  margin-left: 7px;
+}
+
+.navbar a {
+  color: white !important;
+}
+
+.navbar-brand {
   padding-left: 40px;
+}
+
+.navbar a:hover {
+  color: #DCDCDC !important;
 }
 
 .navbar-nav {
   padding-right: 30px;
 }
 
-.custom-nav a:hover {
-  color: gray;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  color: black;
-  font-family: 'Bevan', Georgia;
+.landing-info {
+  color: white;
+  padding-left: 3%;
+  padding-top: 18%;
+  max-width: 40%;
+  font-family: 'Bevan';
 }
 
 .hero-title {
-  font-weight: bold;
+  font-family: 'Bevan';
 }
