--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,17 +1,64 @@
-
+body {
+  font-family: 'Bevan';
+}
 
 .image {
-   background-color: #FBFDFF;
-   background: url('../../assets/dog-landing.jpeg') no-repeat center center;
+   background: url('../../assets/golden-retriever.jpg') no-repeat center center;
    background-size: cover;
    height: 700px;
-   opacity: 0.5;
    margin-top: -20px;
 }
 
-.about {
-  background-color: white;
+.padded-container {
+  padding: 0% 5%;
 }
 
+.float-right {
+  float: right;
+}
 
-/* background-color: rgba(245,245,245,1); */
+.float-left {
+  float: left;
+}
+
+.faq-section {
+  padding-left: 18%;
+  font-size: 14px;
+}
+
+.md-padding-top {
+  padding-top: 30px;
+}
+
+.call-to-action-container {
+  background-color: #dc3545;
+}
+
+.footer {
+  text-align: center;
+}
+
+.footer h1 {
+  color: #dc3545;
+  padding-bottom: 10px;
+  font-family: 'Bevan';
+}
+
+.gray {
+  background-color: rgba(245,245,245,1);
+  padding: 5% 0 5% 0;
+}
+
+.white {
+  background-color: white;
+  padding: 5% 0 5% 0;
+}
+
+.center {
+  text-align: center;
+}
+
+.header {
+  font-family: 'Bevan', georgia, serif;
+  padding-bottom: 30px;
+}
