fixes brand and profile

--- a/src/components/Give/style.css
+++ b/src/components/Give/style.css
@@ -1,8 +1,16 @@
 .container {
-  margin-left: 3% !important;
-  margin-top: 3%;
+  margin: 3% !important;
+  margin-top: 0%;
 }
 
 .card {
   padding: 20px !important;
+}
+
+.token-card {
+  margin-top: 1%;
+}
+
+.card-description-text {
+  font-size: 14px;
 }
