--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -14,6 +14,7 @@ body {
   border-color: black !important;
 }
 
+
 .padded-container {
   padding: 0% 5%;
 }
@@ -24,6 +25,10 @@ body {
 
 .float-left {
   float: left;
+}
+
+.call-to-action-row {
+  margin: 0 !important;
 }
 
 .faq-section {
