--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -14,6 +14,15 @@ body {
   border-color: black !important;
 }
 
+.yellow-background {
+  background-color: #FDBF15;
+}
+
+.step-description {
+  margin: auto;
+  padding-top: 10px;
+  margin-left: 20px;
+}
 
 .padded-container {
   padding: 0% 5%;
@@ -72,5 +81,20 @@ body {
 
 .header {
   font-family: 'Bevan', georgia, serif;
-  padding-bottom: 30px;
+}
+
+.chrome-logo {
+  padding-left: 5px;
+}
+
+.eth-logo {
+  padding-left: 12px;
+}
+
+.dog-logo {
+  padding-left: 15px;
+}
+
+.friend-logo {
+  padding-left: 5px;
 }
