Added web3 functions to existing modal.

--- a/src/components/Give/style.css
+++ b/src/components/Give/style.css
@@ -21,9 +21,16 @@
 
 .modal-footer {
   justify-content: center !important;
-  color: white;
 }
 
 .modal-footer:hover {
-  background-color: #ffcd47 !important;
+  /* background-color: #ffcd47 !important; */
+}
+.errorMessage {
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #e06969;
+}
+.modal-payment-options {
+  text-align: center;
 }
